--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "pipedown",
-  "version": "0.0.1",
-  "description": "A transform stream wrapper for “marked.”",
+  "version": "0.0.2",
+  "description": "A transform stream wrapper around the “marked” markdown parser.",
   "main": "index.js",
   "directories": {
     "test": "test"
   },
   "dependencies": {
-    "marked": "~0.2.9"
+    "marked": "~0.2.10"
   },
   "devDependencies": {
     "tape": "~1.1.1"
