--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "pipedown",
-  "version": "0.0.3",
+  "version": "0.1.0",
   "description": "A transform stream wrapper around the “marked” markdown parser/compiler.",
   "main": "index.js",
   "directories": {
     "test": "test"
   },
   "dependencies": {
+    "through": "~2.3.4",
     "marked": "~0.2.10"
   },
   "devDependencies": {
